se modifican los scripts y las dependendencia, por fin se obtuvo un build exitoso